# IN-practica2

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
datasets/: .~lock.diccionario_ECV.xlsx#
doc/: bibliografia.bib  main.tex
doc/portada/: portada.tex
doc/secciones/sec1/: 1_Introducción.tex
doc/secciones/sec2/: 2_Case_A.tex
notebook/: caseA.py  notebook.py
notebook/__marimo__/session/: notebook.py.json
src/: clustering_demo.py
